@@ -1,6 +1,5 @@
 package fr.insee.survey.datacollectionmanagement.questioning.enums;
 
-import java.util.Arrays;
 import java.util.List;
 
 public enum TypeQuestioningEvent {
@@ -14,7 +13,7 @@ public enum TypeQuestioningEvent {
     VALINT,
     REFUSAL;
 
-    public static final List<TypeQuestioningEvent> STATE_EVENTS = Arrays.asList(
+    public static final List<TypeQuestioningEvent> STATE_EVENTS = List.of(
             VALINT,
             VALPAP,
             REFUSAL,
@@ -24,26 +23,35 @@ public enum TypeQuestioningEvent {
             PARTIELINT,
             PND);
 
-    public static final List<TypeQuestioningEvent> FOLLOWUP_EVENTS = Arrays.asList(
+    public static final List<TypeQuestioningEvent> FOLLOWUP_EVENTS = List.of(
             VALINT,
             VALPAP,
             REFUSAL,
             WASTE,
             HC);
 
-    public static final List<TypeQuestioningEvent> EXTRACT_EVENTS = Arrays.asList(
+    public static final List<TypeQuestioningEvent> EXTRACT_EVENTS = List.of(
             VALINT,
             PARTIELINT);
 
-    public static final List<TypeQuestioningEvent> MY_QUESTIONINGS_EVENTS = Arrays.asList(
+    public static final List<TypeQuestioningEvent> MY_QUESTIONINGS_EVENTS = List.of(
             PARTIELINT,
             HC,
             VALPAP,
             VALINT,
             REFUSAL);
 
-    public static final List<TypeQuestioningEvent> VALIDATED_EVENTS = Arrays.asList(
+    public static final List<TypeQuestioningEvent> VALIDATED_EVENTS = List.of(
             VALINT,
             VALPAP);
+
+    public static final List<TypeQuestioningEvent> OPENED_EVENTS = List.of(
+            INITLA,
+            PARTIELINT);
+
+    public static final List<TypeQuestioningEvent> REFUSED_EVENTS = List.of(
+            WASTE,
+            HC,
+            REFUSAL);
 }
 
